Fix navbar background color on mobile

--- a/assets/landing.scss
+++ b/assets/landing.scss
@@ -33,18 +33,6 @@ header, #intro {
     }
 }
 
-@media (max-width: 768px) {
-    .navbar:not(.top-nav-collapse) {
-        background-color: #24355C;
-    }
-}
-
-@media (min-width: 800px) and (max-width: 850px) {
-    .navbar:not(.top-nav-collapse) {
-        background-color: #24355C;
-    }
-}
-
 @media (min-width: 600px) {
     .navbar.scrolling-navbar {
         padding-top: 16px;
